@@ -185,6 +185,8 @@ t/06195_Dialog_Scan_Image_Sane.t
 t/06195_Dialog_Scan_Sane.t
 t/06196_Dialog_Scan_Image_Sane.t
 t/06196_Dialog_Scan_Sane.t
+t/06197_Dialog_Scan_Image_Sane.t
+t/06197_Dialog_Scan_Sane.t
 t/0621_Dialog_Scan_CLI.t
 t/0622_Dialog_Scan_CLI.t
 t/0623_Dialog_Scan_CLI.t
